# ghool

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ghool/: __main__.py  cli.py  helpers.py  update_readme.py
src/ghool/commands/: close_dependabot_prs.py
